<resources>
    <string name="app_name">Scrollable</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_task">New Task</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="hint">Enter the text</string>
    <string name="task_name">Task Name</string>
    <string name="task_desc">Task Description</string>
    <string name="btn_create">Create</string>
    <string name="title_activity_activity_display_task">ActivityDisplayTask</string>
    <string name="btn_close">Close</string>
    <string name="cancel_task">Cancel</string>
    <string name="saved_data">Saved Data Starts Here:</string>
    <string name="clear_all">Clear All</string>
</resources>
