<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ten.dmitry.scrollable.NewTaskActivity">

    <EditText android:id="@+id/new_task_name"
        android:hint="@string/task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textAlignment="gravity"
        android:gravity="bottom"
        />

    <EditText android:id="@+id/new_task_description"
        android:hint="@string/task_desc"
        android:textAlignment="gravity"
        android:gravity="bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_task_name"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        />
    <Button android:id="@+id/create_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_task_description"
        android:layout_marginTop="20dp"
        android:text="@string/btn_create"
        android:textAlignment="center"
        android:onClick="createTaskCompleted"
        >
    </Button>
    <Button android:id="@+id/cancel_new_task_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_btn"
        android:layout_marginTop="5dp"
        android:text="@string/cancel_task"
        android:onClick="cancelTaskCreation"
        />

</RelativeLayout>
