<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ten.dmitry.scrollable.ActivityDisplayTask">

    <TextView android:id="@+id/display_task_name_label"
        android:text="@string/task_name"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView android:id="@+id/display_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@id/display_task_name_label"
        />

    <TextView android:id="@+id/display_task_description_label"
        android:text="@string/task_desc"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_task_name"
        />
    <TextView android:id="@+id/display_task_description"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_task_description_label"
        />
    <Button android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_task_description"
        android:text="@string/btn_close"
        android:onClick="closeTask"
        >
    </Button>
    <Button
        android:id="@+id/cancel_existing_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_btn"
        android:text="@string/cancel_task"
        android:onClick="cancelExistingTask"
        />

</RelativeLayout>
